# pointy

./: .gitignore  .prettierignore  Cargo.toml  README.md  bundle-cross.sh  bundle-extensions.sh  package.json  vite.config.ts
.github/workflows/: dist-extensions.yml  dist.yml
app/: .gitignore  .prettierignore  package.json  vite.config.ts
app/backend/: .taurignore  Cargo.toml  tauri.conf.json
app/backend/capabilities/: default.json
app/backend/src/: config.rs  error.rs  extensions.rs  lib.rs  main.rs  update.rs
app/src/: app.css
app/src/lib/: api.ts  key_input.ts  toaster.ts  utils.ts
app/src/routes/: +layout.svelte  +page.svelte
crates/extensions/capture_screenshot/: Cargo.toml
crates/pointy_api/: Cargo.toml  README.md
src/: app.html
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/capture_screenshot/: bundle.sh
src-tauri/extensions/capture_screenshot/src/: lib.rs
src-tauri/extensions/create_secure_password/: Cargo.toml
src-tauri/extensions/create_secure_password/.github/workflows/: dist.yaml
src-tauri/extensions/create_secure_password/src/: lib.rs
src-tauri/extensions/generate_qrcode/: Cargo.toml  bundle.sh
src-tauri/extensions/generate_qrcode/.github/workflows/: dist.yaml
src-tauri/extensions/generate_qrcode/src/: lib.rs
src-tauri/extensions/math_equasion/: .gitignore  bundle.sh
src-tauri/extensions/math_equasion/.github/workflows/: dist.yaml
src-tauri/extensions/math_equasion/src/: lib.rs
src-tauri/extensions/template/: bundle.sh
src-tauri/extensions/template/.github/workflows/: dist.yaml
src-tauri/extensions/template/assets/: manifest.json
src-tauri/extensions/template/src/: lib.rs
src-tauri/plugins/capture_screenshot/: Cargo.toml  bundle.sh
src-tauri/plugins/capture_screenshot/src/: lib.rs
src-tauri/plugins/create_secure_password/: bundle.sh
src-tauri/plugins/create_secure_password/assets/: plugin_manifest.json
src-tauri/plugins/create_secure_password/src/: lib.rs
src-tauri/plugins/generate_qrcode/: bundle.sh
src-tauri/plugins/generate_qrcode/src/: lib.rs
src-tauri/plugins/math_equasion/: Cargo.toml  bundle.sh
src-tauri/plugins/math_equasion/src/: lib.rs
src-tauri/plugins/template/: Cargo.toml  bundle.sh
src-tauri/plugins/template/src/: lib.rs
src-tauri/src/: api.rs  lib.rs  main.rs
src/lib/: api.ts  index.ts
src/routes/: +page.svelte
(+22 files in other folders)
