[package]
name = "pointy"
version = "0.1.0"
description = "Workflow improvemets by pointer selectable addons."
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
name = "pointy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
device_query = "3"
xcap = "0.4"
meval = "0.2"
rand = "0.9"
qrcode = "0.14"
image = "0.25"
